# freebsd-oci-containers

./: .gitignore  .pre-commit-config.yaml  .roborev.toml  1_SETUP.md  404.html  BIBLIOGRAPHY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECTS.md  README.md  ROADMAP.md  apply-templates.sh  build.py  cheat_sheet.sh  index.html  objects.inv  pyproject.toml  rebuild_all_images.sh  versions.json  versions.sh
.claude/skills/release/: SKILL.md
.github/workflows/: deploy.yml  validate.yml
annotations/: TEST_ZFS_AND_SYSV_IPC_ANNOTATIONS.md  index.html
annotations/hooks.d/: sysv.json  zfs.sh
base-headless-system/: Containerfile  build.sh
base-system/: Containerfile  build.sh
base-system/files/: default_users.conf
bibliography/: index.html
blog/: index.html
changelog/: index.html
containerfiles/base-headless-system/: CHANGELOG.md  Containerfile  build.sh  description  run.sh
containerfiles/base-linux-alpine-headless-system/: Containerfile  build.sh  description  run.sh
containerfiles/base-linux-alpine-headless-system/files/: run.sh
containerfiles/base-system/: Containerfile  build.sh  description  run.sh
containerfiles/base-system/files/: adduser.conf  run.sh
containerfiles/nginx-base/: CHANGELOG.md  Containerfile  build.sh  description  run.sh
containerfiles/nginx-base/files/: nginx.conf  run.sh
containerfiles/nginx-podman-api/: Containerfile  build.sh  description  run.sh
containerfiles/nginx-podman-api/files/: nginx.conf
containerfiles/nginx-poudriere/: CHANGELOG.md  Containerfile  build.sh  description  run.sh
containerfiles/nginx-poudriere/files/: nginx.conf
containerfiles/pulumi-dev/: CHANGELOG.md  Containerfile  build.sh  description  run.sh
docs/design/: design-principles.md  phase3-design.md  vision-and-design.md
docs/handoff/: 2026-03-22-brainstorming-and-planning.md  2026-03-24-phase3-design-and-planning.md
docs/plans/: implementation-plan.md  phase3-plan.md
docs/reviews/: 2026-02-18_audit_review.md  2026-02-18_rationalization_plan.md
flavours/base/: Containerfile
flavours/zfs/: Containerfile
freebsd/14.3/: base_image
freebsd/14.3/base/: Containerfile
freebsd/14.3/nginx/mainline/: Containerfile
freebsd/14.3/nginx/podman-api/: Containerfile
freebsd/14.3/nginx/poudriere/: Containerfile
freebsd/14.3/node/: LICENSE
freebsd/14.3/zfs/: Containerfile
freebsd/14.snap/: base_image
freebsd/14.snap/base/: Containerfile
freebsd/14.snap/zfs/: Containerfile
freebsd/15.snap/: base_image
freebsd/15.snap/base/: Containerfile
freebsd/15.snap/zfs/: Containerfile
freebsd/16.snap/: base_image
freebsd/16.snap/base/: Containerfile
freebsd/16.snap/zfs/: Containerfile
freebsd_containers/: __init__.py  builder.py  cicd.py  cli.py  config.py  digests.py  docs.py  tags.py  templates.py  versions.py
freebsd_variants/freebsd-base/14.3/: Containerfile
freebsd_variants/freebsd-zfs/14.3/: Containerfile
getting_started/: index.html
images/: index.html
images/base/: index.html
images/golang/: index.html
images/nginx/: index.html
images/node/: index.html
images/postgres/: index.html
images/python/: index.html
images/uv/: index.html
images/zfs/: index.html
issues/: sending_to_the_background.sh
nginx/: Containerfile  build.sh
nginx/files/: run.sh
podman/: 1_SETUP.md  2_HELLO_WORLD.md  3_EXPLORE.md
podman/issues/: example_of_non_functional_exposure_of_container_port_to the host.sh  misc.txt  sending_to_the_background.sh
projects/node/: update_containerfiles.sh
projects/postgres/: update_containerfiles.sh
projects/python/: update_containerfiles.sh
projects/uv/: update_containerfiles.sh
pulumi-dev/: Containerfile  build.sh
scripts/: build.sh  build_all_images.sh  push_all_images.sh  replicate_templates.sh
search/: search_index.json
standalone/: README.md
standalone/caddy_tls/: Caddyfile  Containerfile  build.sh  run.sh
standalone/pdfium/: Containerfile  build.sh
standalone/pkg_cache/: Containerfile  build.sh  newsyslog.conf.d_varnish.conf  pkg_cache_entrypoint.sh  run.sh  stunnel_conf.d_00-daemon.conf  stunnel_conf.d_99-pkg.conf  stunnel_stunnel.conf  varnish_pkg.vcl
standalone/podman-api/: Containerfile.j2  api_info.sh  podman_api.conf
templates/: build.sh.j2  run_pipeline.sh.j2  test.sh.j2
templates/base/: Containerfile.j2
templates/base/ci_cd/: test.sh.j2
templates/ci_cd/: build.sh.j2  push.sh.j2  test.sh.j2
templates/golang/: Containerfile.j2
templates/golang/ci_cd/: test.sh.j2
templates/nginx/: Containerfile.j2  default.conf  nginx.conf  usage.md
templates/node/: Containerfile.j2  LICENSE
templates/node/ci_cd/: test.sh.j2
templates/oci_containers_mkdocs/: mkdocs.yml.j2  project_page.md.j2
templates/oci_containers_mkdocs/docs/: getting_started.md
templates/podman-api/: Containerfile.j2  nginx.conf
templates/postgres/: Containerfile.j2  LICENSE  docker-ensure-initdb.sh  etc.login.conf
templates/postgres/ci_cd/: test.sh.j2
templates/poudriere/: Containerfile.j2  nginx.conf  poudriere.conf
templates/python/: Containerfile.j2
templates/uv/: Containerfile.j2
templates/zfs/: Containerfile.j2
templates/zfs/ci_cd/: test.sh.j2
tests/: __init__.py  conftest.py  test_builder.py  test_cicd.py  test_cli.py  test_config.py  test_digests.py  test_docs.py  test_tags.py  test_templates.py  test_versions.py  test_versions_json.py
(+112 files in other folders)
