[project]
name = "freebsd-containers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipdb>=0.13.13",
    "jinja2>=3.1.6",
    "mkdocs>=1.6.1",
    "requests>=2.32.5",
]

[dependency-groups]
docs = [
    "mkdocs-material>=9.6.19,<10",
    "mkdocstrings[python]>=0.30.0,<1",
    "pymdown-extensions>=10.16.1,<11",
]
