[project]
name = "freebsd-containers"
version = "0.2.0"
description = "FreeBSD OCI container image generation and management"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-2-Clause" }
dependencies = [
    "click>=8.1.0",
    "jinja2>=3.1.6",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pre-commit>=4.5.1",
    "pytest>=9.0.0",
    "pytest-mock>=3.15.0",
    "ipython>=9.10.0",
    "types-requests>=2.32.4.20260324",
]
lint = [
    "commitizen>=4.13.9",
    "pre-commit>=4.5.1",
    "ruff>=0.15.7 ; 'freebsd' not in sys_platform",
]
docs = [
    "mkdocs-material>=9.6.19,<10",
    "mkdocstrings[python]>=0.30.0,<1",
    "pymdown-extensions>=10.16.1,<11",
]

[tool.uv]
default-groups = []
override-dependencies = [
    "grpcio ; 'freebsd' not in sys_platform",
    "ruff ; 'freebsd' not in sys_platform",
]
no-build-isolation-package = ["grpcio", "ruff"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
# build.py is a PoC monolith — excluded until Phase 3 refactoring (Task 3.2)
exclude = ["build.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # Missing trailing comma - conflicts with formatter
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",      # Annotations - tests use pytest conventions
    "D102",     # test methods don't need docstrings (names are descriptive)
    "PLC0415",  # imports inside test functions (e.g. pytest.raises)
    "PLR0913",  # test helpers may have many parameters
    "PLR2004",  # magic values in test assertions are fine
    "S101",     # assert is the pytest idiom
    "RUF012",   # test class attributes don't need ClassVar
    "TC003",    # tests use stdlib imports at runtime (Path, etc.)
    "D104",     # test packages don't need docstrings
]
"freebsd_containers/versions.py" = [
    "PLR2004",  # version parsing uses index constants (1, 2, 3)
]
"freebsd_containers/cicd.py" = [
    "PLR0913",  # render_cicd_scripts needs many explicit parameters
]
"freebsd_containers/docs.py" = [
    "PLR0913",  # render_docs needs many explicit parameters
]

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
markers = [
    "integration: slow tests that build wheels or create venvs",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
